--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script>
         let now = new Date();
         let today = new Date(Date.UTC(now.getUTCFullYear(), now.getUTCMonth(), now.getUTCDate()));
@@ -41,13 +42,26 @@
         }
         #yes-no {
             font-family: hebrew-look, Arial;
-            font-size: 100px;
+            font-size: 125px;
             text-align: center;
             margin: 30px;
         }
         #holiday {
             font-family: Arial;
             text-align: center;
+        }
+        .footer-left {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            padding: 10px;
+            font-family: Arial;
+        }
+        .footer-right {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            padding: 10px;
         }
     </style>
 </head>
@@ -57,6 +71,13 @@
             <p id='yes-no'></p>
             <p id='holiday'></p>
         </div>
+    </div>
+    <div class='footer-left'>
+        Data from <a href='https://www.hebcal.com/' target='_blank' rel='noopener noreferrer'>Hebcal</a>
+    </div>
+    <div class='footer-right'>
+        <a class="github-button" href="https://github.com/dynamitenate" data-size='large' data-show-count='true' aria-label="Follow @dynamitenate on GitHub">Follow @dynamitenate</a>
+        <a class="github-button" href="https://github.com/dynamitenate/isitajewishholiday" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star dynamitenate/isitajewishholiday on GitHub">Star</a>
     </div>
 </body>
 </html>
