--- a/index.html
+++ b/index.html
@@ -1,29 +1,7 @@
 <html>
 <head>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script>
-        let now = new Date();
-        let today = new Date(Date.UTC(now.getUTCFullYear(), now.getUTCMonth(), now.getUTCDate()));
-        let monthNum = today.getMonth() + 1;
-        fetch(`https://www.hebcal.com/hebcal?v=1&year=now&month=${monthNum}&cfg=json&maj=on&min=off&mod=off&nx=off&ss=off&mf=off`)
-            .then(response => response.json())
-            .then(data => {                
-                let holidaysToday = data?.items?.filter(item => new Date(item.date + 'T00:00:00Z').getTime() == today.getTime());
-                let yesnoElement = document.getElementById('yes-no');
-                if (!!data && !!data.items && holidaysToday.length > 0) {
-                    yesnoElement.innerHTML = "YES";
-                    let firstHoliday = holidaysToday[0];
-                    let holidayElement = document.getElementById('holiday');
-                    if (!!firstHoliday.title && !!firstHoliday.link) {
-                        holidayElement.innerHTML = `It's <a href=${firstHoliday.link}>${firstHoliday.title}</a>`;
-                    } else if (!!firstHoliday.title) {
-                        holidayElement.innerHTML = `It's ${firstHoliday.title}`;
-                    }
-                } else {
-                    yesnoElement.innerHTML = "NO";
-                }
-            });
-    </script>
+    <script src="hebcal.js"></script>
     <style>
         @font-face {
             font-family: hebrew-look;
@@ -79,5 +57,6 @@
         <a class="github-button" href="https://github.com/dynamitenate" data-size='large' data-show-count='true' aria-label="Follow @dynamitenate on GitHub">Follow @dynamitenate</a>
         <a class="github-button" href="https://github.com/dynamitenate/isitajewishholiday" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star dynamitenate/isitajewishholiday on GitHub">Star</a>
     </div>
+    <script>updateYesNo()</script>
 </body>
 </html>
