--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script src="hebcal.js"></script>
     <style>
