--- a/index.html
+++ b/index.html
@@ -21,26 +21,28 @@
         }
         #yes-no {
             font-family: hebrew-look, Arial;
-            font-size: 125px;
+            font-size: 150px;
             text-align: center;
             margin: 30px;
         }
         #holiday {
             font-family: Arial;
+            font-size: 20px;
             text-align: center;
         }
-        .footer-left {
+        .footer {
             position: absolute;
             bottom: 0;
             left: 0;
             padding: 10px;
-            font-family: Arial;
+            width: calc(100% - 20px);
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            gap: 5px;
         }
-        .footer-right {
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            padding: 10px;
+        .footer-left > span, a {
+            font-family: Arial;
         }
     </style>
 </head>
@@ -51,12 +53,15 @@
             <p id='holiday'></p>
         </div>
     </div>
-    <div class='footer-left'>
-        Data from <a href='https://www.hebcal.com/' target='_blank' rel='noopener noreferrer'>Hebcal</a>
-    </div>
-    <div class='footer-right'>
-        <a class="github-button" href="https://github.com/dynamitenate" data-size='large' data-show-count='true' aria-label="Follow @dynamitenate on GitHub">Follow @dynamitenate</a>
-        <a class="github-button" href="https://github.com/dynamitenate/isitajewishholiday" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star dynamitenate/isitajewishholiday on GitHub">Star</a>
+    <div class='footer'>
+        <div class='footer-left'>
+            <span>Data from </span>
+            <a href='https://www.hebcal.com/' target='_blank' rel='noopener noreferrer'>Hebcal</a>
+        </div>
+        <div class='footer-right'>
+            <a class="github-button" href="https://github.com/dynamitenate" data-size='large' data-show-count='true' aria-label="Follow @dynamitenate on GitHub">Follow @dynamitenate</a>
+            <a class="github-button" href="https://github.com/dynamitenate/isitajewishholiday" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star dynamitenate/isitajewishholiday on GitHub">Star</a>
+        </div>
     </div>
     <script>updateYesNo()</script>
 </body>
